[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-ingest-api"
description = "Python module with core document ingestion functions."
dynamic = ["version"]  # Declare attrs that will be generated at build time
readme = "README.md"
authors = [
    {name = "Jeremy Dyer", email = "jdyer@nvidia.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "backoff==2.2.1",
    "charset-normalizer>=3.4.1",
    "pandas>=2.0",
    "pydantic>2.0.0",
    "pydantic-settings>2.0.0",
    "pypdfium2>=4.30.1",
    "python-docx>=1.1.2",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "tritonclient",
]

[project.urls]
homepage = "https://github.com/NVIDIA/nv-ingest"
repository = "https://github.com/NVIDIA/nv-ingest"
documentation = "https://docs.nvidia.com/nv-ingest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "version.get_version"}
