[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[project]
name = "nv-ingest-api"
description = "Python module with core document ingestion functions."
dynamic = ["version"]  # Declare attrs that will be generated at build time
readme = "README.md"
authors = [
    {name = "Jeremy Dyer", email = "jdyer@nvidia.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "backoff==2.2.1",
    "moviepy==2.2.1",
    "pandas>=2.0",
    "pydantic>2.0.0",
    "pydantic-settings>2.0.0",
    "fsspec>=2025.5.1",
    "universal_pathlib>=0.2.6",
    "ffmpeg-python==0.2.0",
    "tritonclient",
    "glom",
]

[project.urls]
homepage = "https://github.com/NVIDIA/nv-ingest"
repository = "https://github.com/NVIDIA/nv-ingest"
documentation = "https://docs.nvidia.com/nv-ingest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "version.get_version"}
