[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[project]
name = "nv-ingest-client"
description = "Python client for the nv-ingest service"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Jeremy Dyer", email = "jdyer@nvidia.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "build>=1.2.2",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "fsspec>=2025.2.0",
    "httpx>=0.28.1",
    "pydantic>2.0.0",
    "pydantic-settings>2.0.0",
    "requests>=2.28.2",
    "setuptools>=78.1.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
milvus = [
    "pymilvus==2.5.10",
    "pymilvus[bulk_writer,model]",
]
minio = [
    "minio>=7.2.15",
]


[project.urls]
homepage = "https://github.com/NVIDIA/nv-ingest"
repository = "https://github.com/NVIDIA/nv-ingest"
documentation = "https://docs.nvidia.com/nv-ingest"

[project.scripts]
nv-ingest-cli = "nv_ingest_client.nv_ingest_cli:main"
process-json-files = "nv_ingest_client.util.process_json_files:main"

[tool.setuptools]
py-modules = ["nv_ingest_client"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "version.get_version"}
