[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
package = true

[project]
name = "nemo-retriever"
dynamic = ["version"]
description = "A modern RAG ingestion pipeline from Nvidia"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Jeremy Dyer", email = "jdyer@nvidia.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "ray[data,serve]>=2.49.0",
  "pypdfium2==4.30.0",
  "pandas>=2.0,<3",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
  "pyyaml>=6.0",
  "lancedb",
  "nv-ingest",
  "nv-ingest-api",
  "nv-ingest-client",
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pillow>=12.0.0",
  "numpy>=1.26.0",
  "debugpy>=1.8.0",
  "python-multipart>=0.0.9",
  # transformers 4.x for vLLM 0.16 and embedding models (e.g. llama_nemotron_embed_1b_v2).
  # Versions 4.54.0-4.55.x have a flash attention bug; exclude that range.
  "transformers>=4.49.0,<5.0.0,!=4.54.*,!=4.55.*",
  "tokenizers>=0.20.3",
  "accelerate>=1.1.0",
  "torch~=2.9.1",
  "torchvision>=0.24,<0.25",
  "einops",
  "easydict",
  "addict",
  "nemotron-page-elements-v3>=0.dev0",
  "nemotron-graphic-elements-v1>=0.dev0",
  "nemotron-table-structure-v1>=0.dev0",
  "nemotron-ocr>=0.dev0",
  "markitdown",
  "timm==1.0.22",
  "accelerate==1.12.0",
  "albumentations==2.0.8",
  "open-clip-torch==3.2.0",
  "vllm==0.16.0",
]

[project.optional-dependencies]
asr = [
  # Local ASR (Parakeet nvidia/parakeet-ctc-1.1b): transformers>=5 required by model.
  "transformers>=5.0.0",
  "soundfile>=0.12.0",
  "scipy>=1.11.0",
]
# Optional: prebuilt FlashInfer cubins + flash-attn + xformers for vLLM (faster startup / attention).
# Keeps existing torch~=2.9.1; flash-attn uses a Linux py3.12 wheel from GitHub.
vllm-attention = [
  "flashinfer-cubin==0.6.3",
  "flash-attn>=2.8.3",
  "xformers>=0.0.33,<0.0.34",
]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.2",
]

[project.scripts]
retriever = "nemo_retriever.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "nemo_retriever.version.get_build_version"}

[tool.uv.sources]
nv-ingest = { path = "../src/", editable = true }
nv-ingest-api = { path = "../api/", editable = true }
nv-ingest-client = { path = "../client/", editable = true }
nemotron-page-elements-v3 = { index = "test-pypi" }
nemotron-graphic-elements-v1 = { index = "test-pypi" }
nemotron-table-structure-v1 = { index = "test-pypi" }
nemotron-ocr = { index = "test-pypi" }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }
# Prebuilt wheel for torch 2.9 + cu12 (Linux x86_64, py312). Avoids source build and keeps torch as-is.
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
