[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[project]
name = "nv-ingest"
description = "Python module for multimodal document ingestion"
dynamic = ["version"]  # Declare attrs that will be generated at build time
readme = "README.md"
authors = [
    {name = "Jeremy Dyer", email = "jdyer@nvidia.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.6",
    "fsspec>=2024.10.0",
    "gunicorn",
    "h11>=0.16.0", # Must pin at or above 0.16.0 for CVE mitigation
    "httpx>=0.28.1",
    "nv-ingest-api",
    "nv-ingest-client",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "pandas>=2.0",
    "prometheus-client",
    "psutil>=7.1.0",
    "pyarrow",
    "pydantic>2.0.0",
    "pydantic-settings>2.0.0",
    "pymilvus>=2.5.10",
    "pymilvus[bulk_writer, model]",
    "pypdfium2==4.30.0",
    "PyYAML",
    "ray[all]>=2.49.0",
    "redis>=5.2.1",
    "requests>=2.28.2",
    "rich",
    "s3fs>=2024.10.0",
    "setuptools>=78.1.1",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "build>=1.2.2",
    "pytest>=8.0.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
homepage = "https://github.com/NVIDIA/nv-ingest"
repository = "https://github.com/NVIDIA/nv-ingest"
documentation = "https://docs.nvidia.com/nv-ingest"

[tool.setuptools.dynamic]
version = {attr = "nv_ingest.version.get_version"}
